Fix projects section formatting + remove gap under image

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,23 +21,28 @@
 .title img {
     width: 750px;
     height: auto;
+    display: block; /* Remove gap below image */
 }
 
 .projects {
-    background-color: grey;
+    background-color: lightgrey;
     padding: 40px;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 15px;
 }
 
+.projects .items {
+    display: flex;
+    gap: 40px;
+}
+
 .projects .item {
-    background-color: bisque;
+    background-color: rgb(128, 151, 195);
     border: 4px solid black;
-    height: 24px;
-    margin: 4px;
-    flex: auto;
+    padding: 10px;
 }
 
 body {
